# proga_first_lab_12_var

./: CMakeLists.txt  errors.c  errors.h  main.c  operations.c  operations.h  square_matrix.c  square_matrix.h  tests.c  type_info.h  type_info_complex.c  type_info_complex.h  type_info_double.c  type_info_double.h
